Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15796

Qt Creator hanging at QIODevice::readAll() called from ExtraCompiler::ExtraCompiler

XMLWordPrintable

    • 302162e6d65083ffa2e3754d3353ce3fc4b6b60f

      I've started Qt Creator with a session (qtcreator.pro, qtcreator.qbs, and maybe another project). Qt Creator restored to the design mode showing the last ui file, after some seconds, it freezed with the follow backtrace.

      I can't re-produce this anymore.

      1  read                                                                       syscall-template.S       81  0x7f7e833f482d 
      2  ??                                                                                                      0x7f7e7e724f45 
      3  ??                                                                                                      0x7f7e83ff6de9 
      4  ??                                                                                                      0x7f7e84006043 
      5  QFileDevice::readData(char *, long long)                                                                0x7f7e83fa3115 
      6  QIODevice::read(char *, long long)                                                                      0x7f7e83faac5c 
      7  QIODevice::readAll()                                                                                    0x7f7e83fab57b 
      8  ProjectExplorer::ExtraCompiler::ExtraCompiler                              extracompiler.cpp        120 0x7f7e7565f89c 
      9  QtSupport::UicGenerator::UicGenerator                                      uicgenerator.cpp         46  0x7f7e6fd8d848 
      10 QtSupport::UicGeneratorFactory::create                                     uicgenerator.cpp         124 0x7f7e6fd8e1c6 
      11 QbsProjectManager::Internal::QbsProject::updateCppCodeModel                qbsproject.cpp           796 0x7f7e6963f41f 
      12 QbsProjectManager::Internal::QbsProject::handleQbsParsingDone              qbsproject.cpp           465 0x7f7e6963c744 
      13 QbsProjectManager::Internal::QbsProject::qt_static_metacall                moc_qbsproject.cpp       112 0x7f7e6965bc2e 
      14 QMetaObject::activate(QObject *, int, int, void * *)                                                    0x7f7e8409bcef 
      15 QbsProjectManager::Internal::QbsProjectParser::done                        moc_qbsprojectparser.cpp 149 0x7f7e6965c99c 
      16 QbsProjectManager::Internal::QbsProjectParser::handleQbsParsingDone        qbsprojectparser.cpp     136 0x7f7e696525c5 
      17 QbsProjectManager::Internal::QbsProjectParser::qt_static_metacall          moc_qbsprojectparser.cpp 91  0x7f7e6965c797 
      18 QMetaObject::activate(QObject *, int, int, void * *)                                                    0x7f7e8409bcef 
      19 qbs::AbstractJob::finished                                                 moc_jobs.cpp             248 0x7f7e69325c6c 
      20 qbs::AbstractJob::handleFinished                                           jobs.cpp                 194 0x7f7e691b3c30 
      21 qbs::AbstractJob::qt_static_metacall                                       moc_jobs.cpp             118 0x7f7e693257a0 
      22 QMetaObject::activate(QObject *, int, int, void * *)                                                    0x7f7e8409bcef 
      23 qbs::Internal::InternalJob::finished                                       moc_internaljobs.cpp     166 0x7f7e693249d1 
      24 qbs::Internal::InternalJobThreadWrapper::handleFinished                    internaljobs.cpp         195 0x7f7e691a1c5c 
      25 qbs::Internal::InternalJobThreadWrapper::qt_static_metacall                moc_internaljobs.cpp     246 0x7f7e69324b48 
      26 QObject::event(QEvent *)                                                                                0x7f7e8409d2ca 
      27 QApplicationPrivate::notify_helper(QObject *, QEvent *)                                                 0x7f7e851c504c 
      28 QApplication::notify(QObject *, QEvent *)                                                               0x7f7e851c9488 
      29 QCoreApplication::notifyInternal2(QObject *, QEvent *)                                                  0x7f7e84072e80 
      30 QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *)                                0x7f7e84075673 
      31 ??                                                                                                      0x7f7e840c20f3 
      32 g_main_context_dispatch                                                                                 0x7f7e81eb8e04 
      33 ??                                                                                                      0x7f7e81eb9048 
      34 g_main_context_iteration                                                                                0x7f7e81eb90ec 
      35 QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)                              0x7f7e840c24e7 
      36 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)                                                 0x7f7e84070efa 
      37 QCoreApplication::exec()                                                                                0x7f7e84078d9d 
      38 main                                                                       main.cpp                 527 0x40e820       
      

        1. fullbacktrace.xt.txt
          26 kB
          Nikolai Kosjar
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes